--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Fems | Viajando juntas!</title>
+  <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Khula' rel='stylesheet'>
 </head>
 <body>
-  <script type="module" src="main.js"></script>
+  <main id="container">
+    <img src="./media/logo-blanco-fems-viajando-juntas.png" alt="logo-fems-viajando-juntas" width="200px">
+    <button id="button-login">Iniciar sesión</button>
+    <button id="create-account">Crear cuenta</button>
+    <button id="google-login"><img src="./media/logo-google.png" alt="logo-google">Continuar con Google</button>
+    <button id="google-logout">Cerrar sesión</button>
+  </main>
+  <footer>
+  </footer>
+
+  <script type="module" src="./firebase-config.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
+
 </html>
