--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 
   <script type="module" src="./firebase-config.js"></script>
   <script type="module" src="./main.js"></script>
+  <script type="module" src="./auth.js"></script>
 </body>
 
 </html>
