--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,20 @@
   <link href='https://fonts.googleapis.com/css?family=Khula' rel='stylesheet'>
 </head>
 <body>
-  <main id="container">
+  <div id="root"></div>
+  <!-- <main id="container">
     <img src="./media/logo-blanco-fems-viajando-juntas.png" alt="logo-fems-viajando-juntas" width="200px">
     <button id="button-login">Iniciar sesión</button>
     <button id="create-account">Crear cuenta</button>
     <button id="google-login"><img src="./media/logo-google.png" alt="logo-google">Continuar con Google</button>
     <button id="google-logout">Cerrar sesión</button>
-  </main>
+  </main> -->
   <footer>
   </footer>
 
-  <script type="module" src="./firebase-config.js"></script>
+  
   <script type="module" src="./main.js"></script>
+  <script type="module" src="./firebase-config.js"></script>
   <script type="module" src="./auth.js"></script>
 </body>
 
