Ingreso de sesión con Google, registro e inicio de sesión con correo y contraseña

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fems | Viajando juntas!</title>
+  <link rel="icon" type="image/png" href="favicon-fems.png" sizes="32x32"/>
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Khula' rel='stylesheet'>
 </head>
 <body>
   <div id="root"></div>
-  <footer>
-  </footer>
 
+  <footer>
+    <p>Esta web ha sido elaborada para el proyecto "Social Network" de <br> Laboratoria por: Joki, Patty y Ale.</p>
+  </footer>
   
   <script type="module" src="./main.js"></script>
   <script type="module" src="./firebase-config.js"></script>
