Responsive desktop Sign up listo y login falta formato

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root" class="root-background1"></div>
 
   <footer>
     <p>Esta web ha sido elaborada para el proyecto "Social Network" de Laboratoria por: Joki, Patty y Ale.</p>
