--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Fems | Viajando juntas!</title>
   <link rel="icon" type="image/png" href="favicon-fems-32x32.png" sizes="32x32"/>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="root" class="root-background1"></div>
