--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <title>Fems | Viajando juntas!</title>
   <link rel="icon" type="image/png" href="favicon-fems-32x32.png" sizes="32x32"/>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/c34ffdbd89.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="root" class="root-background1"></div>
