--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   </footer>
   
   <script type="module" src="./main.js"></script>
-  <script type="module" src="./firebase-config.js"></script>
-  <script type="module" src="./auth.js"></script>
+  <script type="module" src="./firebase/firebase-config.js"></script>
+  <script type="module" src="./firebase/auth.js"></script>
 </body>
 
 </html>
