Página desplegada V4.0 - Actualización de estilos - Actualización del Readme - Cambio de botón de Google

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,12 @@
 <body>
   <div id="root" class="root-background1"></div>
 
-  <footer>
-    <p>Esta web ha sido elaborada para el proyecto "Social Network" de Laboratoria por: Joki, Patty y Ale.</p>
+  <footer id="footerHTML">
+    <p>Desarrollada por: 
+      <a href="https://github.com/alextina" target="_blank">Alejandra Castillo</a>, 
+      <a href="https://github.com/JOKI6696" target="_blank">Johana Gonzales</a> y
+      <a href="https://github.com/patriciact29" target="_blank">Patricia Cornelio</a>.
+    </p>
   </footer>
   
   <script type="module" src="./main.js"></script>
